Ham colors fix
update to colors not showing hamburger

--- a/Portfolio-C/src/styles.css
+++ b/Portfolio-C/src/styles.css
@@ -26,7 +26,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-    background-color: #946b2d;
+    background-color: #000000;
 }
 
 ul {
@@ -200,7 +200,7 @@ a {
         display: block;
         border: 0;
         background-color: transparent;
-        color: white;
+        color: #ffffff;
         font-size: 30px;
         margin: 10px;
     }
